--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,10 +33,16 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
+
+db.default.driver=org.postgresql.Driver
+db.default.url=${?JDBC_DATABASE_URL}
+db.default.user=${?JDBC_DATABASE_USERNAME}
+db.default.password=${?JDBC_DATABASE_PASSWORD}
+
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
